Add external principal context mapping
